<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">CubixWorld Mobile</string>
    <string name="app_short_name">CubixWorld Mobile</string>
    <string name="login_online_username_hint">Имя пользователя</string>
    <string name="login_online_login_label">Войти</string>
    <string name="hint_control_mapping">"Нажмите на центральную шестерёнку ⚙, чтобы открыть меню действий.\n Выберите кнопку, чтобы удалить её или скопировать;\nизменить её свойства, размер или привязанные клавиши."</string>
    <string name="warning_remove_account">Эта учётная запись будет удалена!</string>
    <string name="alerttitle_installmod">Выберите установщик мода</string>
    <string name="error_fatal">CubixWorld Mobile был остановлен в результате сбоя</string>
    <string name="error_no_version">Нет версий!</string>
    <string name="error_show_more">Развернуть</string>
    <string name="error_show_less">Свернуть</string>
    <string name="toast_permission_denied">Требуется разрешение на чтение/запись в хранилище!</string>
    <string name="toast_optifine_success">Установка прошла успешно</string>
    <string name="mcl_tab_wiki">Вики</string>
    <string name="mcl_launch_cleancache">Очистка файлов кэша</string>
    <string name="mcl_launch_downloading">Загрузка %s</string>
    <string name="mcl_launch_downloading_progress">"Загрузка %s (%.2f Мбайт / %.2f Мбайт)"</string>
    <string name="mcl_launch_download_assets">Подготовка к загрузке ресурсов</string>
    <string name="mcl_options">Опции</string>
    <string name="mcl_option_customcontrol">Раскладка управления</string>
    <string name="mcl_setting_title_use_surface_view">Альтернативный визуализатор</string>
    <string name="mcl_setting_subtitle_use_surface_view">Может помочь в случаях, когда производительность ограничена медленным ГП.</string>
    <string name="mcl_setting_title_ignore_notch">Полноэкранный режим</string>
    <string name="mcl_setting_subtitle_ignore_notch">Игнорирует вырез под фронтальную камеру и расширяет экран под неё.\nДаёт большее погружение в игру.</string>
    <string name="mcl_setting_title_resolution_scaler">Уменьшение разрешения</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Позволяет уменьшить разрешение игры. Максимальное разрешение — 100%.</string>
    <string name="mcl_setting_title_longpresstrigger">Длительность удерживания</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Длительность удерживания для разрушения блоков и выбрасывания предметов.</string>
    <string name="mcl_setting_title_buttonscale">Размер кнопок</string>
    <string name="mcl_setting_subtitle_buttonscale">Увеличьте, если они слишком малы.</string>
    <string name="mcl_setting_title_mousescale">Размер указателя</string>
    <string name="mcl_setting_subtitle_mousescale">Изменить размер указателя виртуальной мыши.</string>
    <string name="mcl_setting_title_javaargs">Аргументы запуска JVM</string>
    <string name="mcl_setting_subtitle_javaargs">Осторожно, необдуманное изменение может привести к сбою игры.</string>
    <string name="mcl_setting_category_renderer">Визуализатор</string>
    <string name="mcl_setting_renderer_gles2_4">Holy GL4ES (все версии, быстрый)</string>
    <string name="mcl_setting_renderer_vulkan_zink">Zink (Vulkan; все версии, средний)</string>
    <string name="mcl_setting_renderer_ltw">LTW (OpenGL ES 3; 1.17 и выше)</string>
    <string name="mcl_setting_veroption_release">Релизы</string>
    <string name="mcl_setting_veroption_snapshot">Снапшоты</string>
    <string name="mcl_setting_veroption_oldalpha">Старые альфа</string>
    <string name="mcl_setting_veroption_oldbeta">Старые бета</string>
    <string name="mcl_setting_java_sandbox">Безопасное выполнение .jar</string>
    <string name="mcl_setting_java_sandbox_subtitle">Управляет доступностью менеджера безопасной среды Java при выполнении .jar-файла.</string>
    <string name="mcl_version_clone">Копировать</string>
    <string name="global_edit">Редактировать</string>
    <string name="global_error">Ошибка</string>
    <string name="global_load">Загрузить</string>
    <string name="global_name">Имя</string>
    <string name="global_remove">  Удалить  </string>
    <string name="global_clone">Копировать</string>
    <string name="global_restart">Перезапуск</string>
    <string name="global_save">Сохранить</string>
    <string name="global_unpacking">Распаковка %s</string>
    <string name="global_error_field_empty">Это поле не может быть пустым</string>
    <string name="global_waiting">Подождите</string>
    <string name="global_select">Выбрать</string>
    <string name="global_retry">Обновить</string>
    <string name="global_default">По умолчанию</string>
    <string name="mcn_exit_title">Произошёл собой приложения/игры с кодом %d. Проверьте latestlog.txt, чтобы получить больше информации.</string>
    <string name="mcn_signal_title">Произошло аварийное завершение игры с сигналом %d. Проверьте latestlog.txt, чтобы получить больше информации.</string>
    <string name="mcn_exit_confirm">Вы уверены, что хотите принудительно завершить игру?</string>
    <string name="mcn_check_fail_vulkan_support">Визуализатор Zink (Vulkan) не поддерживается на вашем устройстве.</string>
    <string name="control_chat">Чат</string>
    <string name="control_debug">Отладка</string>
    <string name="control_primary">ЛКМ</string>
    <string name="control_secondary">ПКМ</string>
    <string name="control_shift">◇</string>
    <string name="control_inventory">Инв</string>
    <string name="control_up">▲</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_jump">⬛</string>
    <string name="control_thirdperson">F5</string>
    <string name="control_listplayers">Tab</string>
    <string name="control_mouse">Мышь</string>
    <string name="control_mouseoff">Мышь: Выкл</string>
    <string name="control_mouseon">Мышь: Вкл </string>
    <string name="control_forceclose">Завершить процесс</string>
    <string name="control_viewout">Журнал</string>
    <string name="control_adebug">Отладка ввода</string>
    <string name="control_customkey">Нажать клавишу</string>
    <string name="import_control_label">Импортирование управления</string>
    <string name="import_control_invalid_file">Недопустимый или повреждённый файл</string>
    <string name="import_control_import_button">импортировать раскладку</string>
    <string name="import_control_verifying_file">Идёт проверка файла. Подождите и попробуйте еще раз.</string>
    <string name="import_control_invalid_name">Недопустимое имя файла или файл с таким именем уже существует</string>
    <string name="import_control_done">Импортирование завершено</string>
    <string name="customctrl_toggle">Переключать касанием</string>
    <string name="customctrl_size">Размер</string>
    <string name="customctrl_mapping">Клавиши</string>
    <string name="customctrl_orientation">Сторона разворота</string>
    <string name="customctrl_background_bitmap">Фоновое изображение</string>
    <string name="customctrl_background_color">Цвет фона</string>
    <string name="customctrl_background_color_warning">Изменение цвета фона сбросит фоновое изображение</string>
    <string name="customctrl_corner_radius">Радиус скругления</string>
    <string name="customctrl_stroke_width">Ширина контура</string>
    <string name="customctrl_stroke_color">Цвет контура</string>
    <string name="customctrl_button_opacity">Видимость кнопки</string>
    <string name="customctrl_addbutton">Добавить кнопку</string>
    <string name="customctrl_addbutton_drawer">Добавить группу кнопок</string>
    <string name="customctrl_addbutton_joystick">Добавить джойстик</string>
    <string name="customctrl_addsubbutton">Добавить</string>
    <string name="customctrl_selectdefault">Выбрать основную</string>
    <string name="customctrl_export">Поделиться раскладкой</string>
    <string name="main_share_logs">Поделиться журналом</string>
    <string name="main_install_jar_file">Запустить .jar</string>
    <string name="main_play">Играть</string>
    <string name="autoram_info_msg">Выделено %d Мбайт ОЗУ</string>
    <string name="mcl_setting_check_libraries">Проверка библиотек после загрузки</string>
    <string name="mcl_setting_check_libraries_subtitle">Принуждает лаунчер проверять хеш библиотеки, если он доступен. Предотвращает использование повреждённых библиотек.</string>
    <string name="dl_library_sha_fail">Библиотека %s повреждена и будет загружена повторно</string>
    <string name="dl_library_sha_unknown">Библиотеку %s не удалось проверить; допустим, она в порядке</string>
    <string name="dl_library_sha_pass">Библиотека %s проверена и готова к использованию</string>
    <string name="mcl_disable_gestures">Отключить жесты</string>
    <string name="mcl_disable_gestures_subtitle">Переключение жестов размещения/разрушения блока при касании/удерживании экрана.</string>
    <string name="mcl_disable_swap_hand">Отключить смену руки по двойному касанию</string>
    <string name="mcl_disable_swap_hand_subtitle">Отключает перемещение предмета во вторую руку при двойном касании по нему в панели инструментов.</string>
    <string name="mcl_setting_title_mousespeed">Скорость указателя</string>
    <string name="mcl_setting_subtitle_mousespeed">Изменить скорость указателя виртуальный мыши.</string>
    <string name="customctrl_passthru">Пропускать касание в игру</string>
    <string name="customctrl_swipeable">Считывать движение пальца</string>
    <string name="mcl_memory_allocation">Выделение памяти</string>
    <string name="mcl_memory_allocation_subtitle">Управление объёмом выделяемой игре памяти.</string>
    <string name="preference_mouse_start_title">Запуск с виртуальной мышью</string>
    <string name="preference_mouse_start_description">При запуске игры виртуальная мышь будет включена по умолчанию.</string>
    <string name="preference_sustained_performance_title">Режим стабилизации производительности</string>
    <string name="preference_sustained_performance_description">Уменьшает перегрев устройства за счёт ограничения максимальной производительности.</string>
    <string name="preference_force_vsync_title">Принудительная вертикальная синхронизация</string>
    <string name="preference_force_vsync_description">Уменьшает перегрев устройства за счёт ограничения максимальной производительности.</string>
    <string name="preference_edit_controls_title">Изменить раскладку</string>
    <string name="preference_edit_controls_summary">Настройте кнопки управления по вашему желанию.</string>
    <string name="preference_gyro_invert_x_axis">Инвертировать поворот</string>
    <string name="preference_gyro_invert_y_axis">Инвертировать наклон</string>
    <string name="preference_gyro_invert_x_axis_description">Поменять направление поворота по горизонтали.</string>
    <string name="preference_gyro_invert_y_axis_description">Поменять направление наклона по вертикали.</string>
    <string name="preference_enable_gyro_title">Управление наклоном</string>
    <string name="preference_enable_gyro_description">Позволяет управлять положением камеры в игре путём вращения устройства.</string>
    <string name="preference_gyro_sensitivity_title">Чувствительность гироскопа</string>
    <string name="preference_gyro_sensitivity_description">Изменение чувствительности датчика вращения.</string>
    <string name="preference_gyro_sample_rate_title">Интервал опроса гироскопа</string>
    <string name="preference_gyro_sample_rate_description">Увеличьте, если управление наклоном снижает производительность.</string>
    <string name="mcl_setting_title_buttonallcaps">Заглавные буквы на кнопках</string>
    <string name="mcl_setting_subtitle_buttonallcaps">Отключите, если хотите использовать строчные буквы в своей раскладке управления.</string>
</resources>