<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto" >


    <Preference
        android:title="@string/preference_edit_controls_title"
        android:summary="@string/preference_edit_controls_summary">
        <intent android:targetPackage="@string/application_package" android:targetClass="net.kdt.pojavlaunch.CustomControlsActivity" android:action=".CustomControlsActivity"/>
    </Preference>


        <CheckBoxPreference
            android:defaultValue="false"
            
            android:key="disableGestures"
            android:summary="@string/mcl_disable_gestures_subtitle"
            android:title="@string/mcl_disable_gestures"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disableDoubleTap"
            android:summary="@string/mcl_disable_swap_hand_subtitle"
            android:title="@string/mcl_disable_swap_hand"
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="timeLongPressTrigger"
            android:summary="@string/mcl_setting_subtitle_longpresstrigger"
            android:title="@string/mcl_setting_title_longpresstrigger"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:seekBarIncrement="10"
            
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="buttonscale"
            android:title="@string/mcl_setting_title_buttonscale"
            android:summary="@string/mcl_setting_subtitle_buttonscale"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:seekBarIncrement="5"
            
            />
        <CheckBoxPreference
            android:key="buttonAllCaps"
            android:defaultValue="true"
            android:title="@string/mcl_setting_title_buttonallcaps"
            android:summary="@string/mcl_setting_subtitle_buttonallcaps"
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="mousescale"
            android:summary="@string/mcl_setting_subtitle_mousescale"
            android:title="@string/mcl_setting_title_mousescale"

            app2:selectable="false"
            app2:seekBarIncrement="5"
            app2:showSeekBarValue="true"
            
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="mousespeed"
            android:summary="@string/mcl_setting_subtitle_mousespeed"
            android:title="@string/mcl_setting_title_mousespeed"
            
            app2:selectable="false"
            app2:seekBarIncrement="5"
            app2:showSeekBarValue="true" />
        <CheckBoxPreference
            android:key="mouse_start"
            android:title="@string/preference_mouse_start_title"
            android:summary="@string/preference_mouse_start_description"
            />
        <CheckBoxPreference
            android:key="enableGyro"
            android:title="@string/preference_enable_gyro_title"
            android:summary="@string/preference_enable_gyro_description"/>
        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gyroSensitivity"
            android:title="@string/preference_gyro_sensitivity_title"
            android:summary="@string/preference_gyro_sensitivity_description"
            app2:selectable="false"
            app2:seekBarIncrement="5"
            app2:showSeekBarValue="true"/>
        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="gyroSampleRate"
            android:title="@string/preference_gyro_sample_rate_title"
            android:summary="@string/preference_gyro_sample_rate_description"
            app2:selectable="false"
            app2:showSeekBarValue="true"/>
        <CheckBoxPreference
            android:key="gyroInvertX"
            android:title="@string/preference_gyro_invert_x_axis"
            android:summary="@string/preference_gyro_invert_x_axis_description"/>
        <CheckBoxPreference
            android:key="gyroInvertY"
            android:title="@string/preference_gyro_invert_y_axis"
            android:summary="@string/preference_gyro_invert_y_axis_description"/>

</PreferenceScreen>