<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    app2:iconSpaceReserved="false">
    <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference app2:iconSpaceReserved="false"
        android:key="allocation"

        android:summary="@string/mcl_memory_allocation_subtitle"
        android:title="@string/mcl_memory_allocation"
        app2:showSeekBarValue="true"
        app2:seekBarIncrement="10"
        app2:selectable="false"/>


        <CheckBoxPreference app2:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="ignoreNotch"
            android:summary="@string/mcl_setting_subtitle_ignore_notch"
            android:title="@string/mcl_setting_title_ignore_notch"
            
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference app2:iconSpaceReserved="false"
            android:key="resolutionRatio"
            android:summary="@string/mcl_setting_subtitle_resolution_scaler"
            android:title="@string/mcl_setting_title_resolution_scaler"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:seekBarIncrement="5"
            
            />

        <CheckBoxPreference app2:iconSpaceReserved="false"
            android:title="@string/preference_sustained_performance_title"
            android:summary="@string/preference_sustained_performance_description"
            android:key="sustainedPerformance"
            android:defaultValue="false"
            />

        <CheckBoxPreference app2:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="alternate_surface"
            android:summary="@string/mcl_setting_subtitle_use_surface_view"
            android:title="@string/mcl_setting_title_use_surface_view"
            />

        <CheckBoxPreference app2:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="force_vsync"
            android:summary="@string/preference_force_vsync_description"
            android:title="@string/preference_force_vsync_title"
            />
</PreferenceScreen>